gateway/nginx.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gateway-nginx
  namespace: gateway
spec:
  selector:
    matchLabels:
      app: gateway-nginx
  template:
    metadata:
      annotations:
        pmh.codes/config-revision: "2026-10-02-1"
      labels:
        app: gateway-nginx
    spec:
      restartPolicy: Always
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: nginx
          image: ghcr.io/pmh-only/nginx:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            capabilities:
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - name: tls
              mountPath: /etc/nginx/tls
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: gateway-ech-secrets
              mountPath: /etc/nginx/ech/server.ech.pem
              subPath: server.ech.pem
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /_gwhealthz
              port: 443
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /_gwhealthz
              port: 443
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: tls
          secret:
            secretName: gateway-tls-secret
            optional: false
        - name: gateway-ech-secrets
          secret:
            secretName: gateway-ech-secrets
        - name: nginx-config
          configMap:
            name: gateway-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-nginx
spec:
  clusterIP: 172.17.0.30
  selector:
    app: gateway-nginx
  ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 443

    - name: http3
      protocol: UDP
      port: 443
      targetPort: 443
